clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/field_borrow_var/field_borrow_var.cbs
// RUN: %clang_cc1 -verify %s

typedef struct R {
    int a;
    int b;
} R;

typedef struct S {
    R * borrow r;
    int num;
} S;

void use_mut(R * borrow);
void use_const(const R * borrow);

void test1() {
    R local_r = {.a = 1, .b = 2};
    S s = {.r = &mut local_r, .num = 3}; // expected-note {{previous borrow is here}}
    const R * borrow const_r = &const local_r;
    local_r.a = 4; // expected-error {{Can not modify 'local_r.a' because be borrowed}}
    use_mut(s.r);
}

void test2() {
    R local_r = {.a = 1, .b = 2};
    S s = {.r = &mut local_r, .num = 3};
    const R * borrow const_r = &const local_r; // expected-note {{previous borrow is here}}
    local_r.a = 4; // expected-error {{Can not modify 'local_r.a' because be borrowed}}
    use_const(const_r);
}

void test3() {
    R local_r = {.a = 1, .b = 2};
    S s = {.r = &mut local_r, .num = 3};
    const R * borrow const_r = &const local_r;
    int y = local_r.a;
    use_const(const_r);
}